# Gaelic-Gym-Booker

./: .gitignore  .replit  AREA_COLUMN_VERIFICATION.md  DATABASE.md  FACILITY_REQUESTS_IMPLEMENTATION.md  PITCH_BOOKING_TEST_GUIDE.md  QUICK_TEST_COMMANDS.sh  RECOMMENDATIONS.md  SETUP_GUIDE.md  check_members_db.py  check_users.py  claude.md  init_db.py  pyproject.toml  replit.md  restart-servers.bat  setup_ggb.bat  shutdown.bat  start-all.bat  startup.bat  test-pitch-booking.bat  test_auth_service.py  test_password.py  verify_area_column.py
attached_assets/: Pasted-Test-Strategy-Overview-Testing-layers-Manual-smoke-test_1770145285295.txt
backend/: check_changing_rooms.py  check_users.py  create_test_users.py  get_ballwall_id.py  pytest.ini  reset_admin_password.py  seed_pitches.py  seed_resources.py  update_clubhouse_rooms.py
backend/alembic/: env.py
backend/alembic/versions/: 6f9a394b7ead_add_booking_type_and_party_size.py  701946b0ac15_add_qr_code_to_member.py  79b0e6c7e804_add_pending_approval_booking_status.py  85e8ac333fe5_add_version_column_to_bookings.py  a1b2c3d4e5f6_add_notifications_table.py  (+7 more)
backend/app/: __init__.py  config.py  config.py.bak  database.py  database.py.bak  main.py
backend/tests/: README_TESTS_DISABLED.md  conftest.py  conftest.py.disabled  test_api_admin.py  test_api_auth.py  test_api_bookings.py  test_booking_scenarios.py  test_booking_service.py  test_user_membership.py
frontend/: TESTING.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.tsbuildinfo
frontend/public/: site.webmanifest
(+101 files in other folders)
